# khomdev_DeFi_Tracker

./: .env.example  .gcloudignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  scratch_test_auth.py  test_django.py  test_fetch.py  test_fetch2.py  test_yf.py
dashboard/: models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_alter_userasset_unique_together_and_more.py
dashboard/services/: ai.py  cache.py  indicators.py  market_data.py  schemas.py
dashboard/tests/: conftest.py  test_services_ai.py  test_services_indicators.py  test_views_auth.py  test_views_market.py
dashboard/views/: analysis.py  auth.py  dashboard.py  debug.py  market.py  watchlist.py
finance_multitool/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
finance_multitool/settings/: base.py  dev.py  prod.py
static/css/: style.css
templates/: base.html
templates/dashboard/: analysis.html  index.html
templates/registration/: login.html  register.html
