[build-system]
requires = ["setuptools>=64,<76"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "defi-tracker"
version = "0.1.0"
description = "Crypto asset watchlist with candlestick charts and LLM-generated technical commentary"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }

dependencies = [
    "Django>=4.2,<5.1",
    "yfinance>=1.2,<2",
    "pandas>=2.3,<3",
    "numpy>=2.0,<3",
    "requests>=2.32,<3",
    "python-dotenv>=1.0,<2",
    "google-genai>=1.47,<2",
    "anthropic>=0.25,<1",
    "gunicorn>=20.1,<22",
    "whitenoise>=6.6,<7",
    "dj-database-url>=2.1,<3",
    "psycopg2-binary>=2.9,<3",
    "httpx>=0.28,<1",
    "python-dateutil>=2.9,<3",
    "pytz>=2026.1,<2027",
    "sqlparse>=0.5,<1",
    "tenacity>=9.1,<10",
    "typing-extensions>=4.15,<5",
    "protobuf>=6.33,<7",
    "pydantic>=2.13,<3",
    "websockets>=15.0,<16",
    "multitasking>=0.0.12,<1",
    "frozendict>=2.4,<3",
    "platformdirs>=4.4,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-django>=4,<5",
    "ruff>=0.11,<1",
    "mypy>=1.15,<2",
    "django-stubs>=5,<6",
    "pytest-mock>=3,<4",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["migrations", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "dashboard.services.*"
strict = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "finance_multitool.settings.dev"
testpaths = ["dashboard/tests"]

